--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         clientId: '78af01dd70ed42c9be996d1f9e2fbc93',
     	target: 'insta-kz'
         get: 'user',
-        userID: 'kristenzirkler',
+        userID: 135419,
         limit: 9,
         resolution: 'standard_resolution'
     });
